--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,7 @@
 name = "gtfsgraph"
 version = "0.1.0"
 authors = ["Nick Hynes <nhynes@mit.edu>"]
+
+[dependencies]
+csv = "0.14.2"
+rustc-serialize = "0.3"
